Closed
Bug 247629
Opened 21 years ago
Closed 20 years ago
(PATCH)mozilla-thunderbird fails to build on 64-bit solaris 9 with compile error under freetype2 tree
Categories
(Core Graveyard :: GFX: Gtk, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: funtoos, Assigned: funtoos)
References
Details
(Keywords: 64bit)
Attachments
(1 file)
|
898 bytes,
patch
|
jshin1987
:
review+
bzbarsky
:
superreview+
chofmann
:
approval1.8b2+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (X11; U; SunOS sun4u; en-US; rv:1.6) Gecko/20040424 Galeon/1.3.14
Build Identifier: Mozilla/5.0 (X11; U; SunOS sun4u; en-US; rv:1.6) Gecko/20040424 Galeon/1.3.14
I get compile error when I try to build mozilla-thunderbird-0.7. The
/private/portage/var/tmp/portage/mozilla-thunderbird-0.7/work/mozilla/gfx/src/freetype
directory fails to compile with errors like this:
-----------------------
....
Z_DLL_SUFFIX=".so" -DXP_UNIX=1 -DUNIX_ASYNC_DNS=1 -DJS_THREADSAFE=1
-DNS_PRINT_PREVIEW=1 -DNS_PRINTING=1 -DMOZILLA_LOCALE_VERSION="1.7"
-DMOZILLA_REGION_VERSION="1.7" -DMOZILLA_SKIN_VERSION="1.5" -D_MOZILLA_CONFIG_H_
-DMOZILLA_CLIENT nsFreeType.cpp
CC: Warning: -xO1 overwrites previously set optimization level of -O3
"nsFreeType.cpp", line 101: Error: Cannot cast from int(*)(FT_FaceRec_*)* to int.
"nsFreeType.cpp", line 102: Error: Cannot cast from int(*)(FT_LibraryRec_*)* to int.
"nsFreeType.cpp", line 103: Error: Cannot cast from int(*)(FT_GlyphRec_*)* to int.
...
----------------------
The attched patch resolves the issue with function pointer offsets being
integer. The patch makes it long. I am assuming that since its the same code
base, mozilla 64-bit must suffer from same bug....
Reproducible: Always
Steps to Reproduce:
1. compile mozilla-thunderbird-0.7
2.
3.
Actual Results:
compile errors
Expected Results:
should compile
Comment 2•21 years ago
|
||
gtk
Assignee: nobody → blizzard
Status: UNCONFIRMED → NEW
Component: Build Config → GFX: Gtk
Ever confirmed: true
QA Contact: core.build-config → ian
Updated•20 years ago
|
Attachment #151192 -
Flags: superreview+
Attachment #151192 -
Flags: review?(jshin1987)
Updated•20 years ago
|
Attachment #151192 -
Flags: review?(jshin1987) → review+
Comment 3•20 years ago
|
||
Comment on attachment 151192 [details] [diff] [review]
use long for the function pointer offset instead of int...duh?
Requesting approval for simple build bustage fix on 64-bit systems.
Attachment #151192 -
Flags: approval1.8b2?
Comment 4•20 years ago
|
||
Comment on attachment 151192 [details] [diff] [review]
use long for the function pointer offset instead of int...duh?
a=chofmann
Attachment #151192 -
Flags: approval1.8b2? → approval1.8b2+
Updated•20 years ago
|
Assignee: blizzard → funtoos
Comment 5•20 years ago
|
||
Patch checked in for 1.8b2. Sunil, thanks for the patch! In general, for
future reference, you want to request reviews on a patch to make sure it
actually gets noticed by someone... :(
Status: NEW → RESOLVED
Closed: 20 years ago
Resolution: --- → FIXED
Comment 6•19 years ago
|
||
*** Bug 310338 has been marked as a duplicate of this bug. ***
Comment 7•19 years ago
|
||
So bug 310338 is about 1.7 branch. Do we want this patch on those branches?
Updated•17 years ago
|
Product: Core → Core Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•