Fix 64-bit bustage. Bug 247629, patch by Sunil <funtoos@yahoo.com>, r=jshin, sr=bzbarsky, a=chofmann